--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,12 +41,12 @@ li a:hover {
 	display: inline-block;
 	width: 100%;
 	background-color: #ffffff;
-	border-bottom: 1px solid #cccccc;
+	border-bottom: 2px solid #cccccc;
 }
 
 nav {
 	margin-top: 20px;
-	margin-left: 60%;
+	margin-left: 920px;
 	width: 30%;
 }
 
@@ -64,7 +64,6 @@ nav {
 }
 
 .container {
-	width: 960px;
 	margin-right: auto; 
 	margin-left: auto;
 }
@@ -72,7 +71,7 @@ nav {
 .footer {
 	background-color: #666666;
 	padding: 14px 16px;
-	border-top: 2px solid #4aaaa5;
+	border-top: 4px solid #4aaaa5;
 	color: silver;
 }
 
@@ -80,4 +79,42 @@ nav {
 	text-align: center;
 }
 
+.main-section {
+	width: 960px;
+	display: inline-block;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+#content {
+	width: 650px;
+	background-color: #ffffff;
+	float: left;
+	margin-left: 135px;
+}
+
+.profile-image {
+	float: left;
+	margin: 6px 20px 30px 20px;
+	overflow: auto;
+}
+
+#sidebar {
+	width: 270px;
+	background-color: red;
+	display: right;
+	margin-left: 95%;
+}
+
+h1 {
+	margin: 30px 20px 20px 20px;
+	color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 20px;
+	border-bottom: 1px solid #777777;
+}
+
+.p-about {
+	overflow: auto;
+	color: #777777;
+}
 
