--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,21 +100,45 @@ nav {
 
 #sidebar {
 	width: 270px;
-	background-color: red;
+	background-color: #ffffff;
 	display: right;
 	margin-left: 95%;
+	color: #4aaaa5;
+	height: 160px;
 }
 
 h1 {
+	padding: 10px;
 	margin: 30px 20px 20px 20px;
 	color: #4aaaa5;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-size: 20px;
-	border-bottom: 1px solid #777777;
+	border-bottom: 1px solid #cccccc;
+}
+
+h2 {
+	margin: 0px 20px 20px 20px;
+	padding: 10px;
+	color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 20px;
+	border-bottom: 1px solid #cccccc;
+	text-align: center;
 }
 
 .p-about {
 	overflow: auto;
 	color: #777777;
 }
+
+.icons {
+	width: 66px;
+	height: 66px;
+	display: inline-block;
+	margin: 0 auto;
+	position: relative;
+	padding: 10px;
+}
+
+
 
