--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,22 +45,24 @@ li a:hover {
 }
 
 nav {
-	margin-top: 20px;
+	margin-top: 15px;
 	margin-left: 920px;
 	width: 30%;
+
 }
 
 #nav-header {
 	background-color: #4aaaa5;
 	margin-left: 10%;
-	padding: 14px 16px;
+	padding: 0px 16px;
 	float: left;
 	color: #ffffff;
 }
 
 .header-font {
 	font-family: 'Georgia', Times, Times New Roman, serif;
-	font-size: 20px;
+	font-size: 25px;
+	letter-spacing: 4px;
 }
 
 .container {
@@ -70,7 +72,7 @@ nav {
 
 .footer {
 	background-color: #666666;
-	padding: 14px 16px;
+	padding: 0px 16px;
 	border-top: 4px solid #4aaaa5;
 	color: silver;
 }
@@ -109,11 +111,12 @@ nav {
 
 h1 {
 	padding: 10px;
-	margin: 30px 20px 20px 20px;
+	margin: 0px 20px 20px 20px;
 	color: #4aaaa5;
 	font-family: 'Georgia', Times, Times New Roman, serif;
-	font-size: 20px;
+	font-size: 25px;
 	border-bottom: 1px solid #cccccc;
+	line-height: 70px;
 }
 
 h2 {
@@ -124,6 +127,7 @@ h2 {
 	font-size: 20px;
 	border-bottom: 1px solid #cccccc;
 	text-align: center;
+	line-height: 40px;
 }
 
 .p-about {
